k8s/00-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edge-control
